force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <description>A question node of a Survey graph. Edges (next-question) live on Answer_Option__c.</description>
    <label>Question</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>