force-app/main/default/objects/Question__c/fields/Default_Next_Question__c.field-meta.xml
<CustomField>
    <fullName>Default_Next_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fallback graph edge used when no Answer_Option carries the next-question for this node. Required for Free Text / Scale / Date questions (which have no options) and for Multi Choice questions where selected options route divergently. Empty = terminal node.</description>
    <label>Default Next Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Default-Routed From</relationshipLabel>
    <relationshipName>Default_Routed_From</relationshipName>
    <type>Lookup</type>
</CustomField>