force-app/main/default/objects/Question__c/fields/Editor_X__c.field-meta.xml
<CustomField>
    <fullName>Editor_X__c</fullName>
    <description>X coordinate of this node in the authoring graph editor. Persisted so manual layout survives reloads. Ignored when the editor's auto-layout flag is on.</description>
    <label>Editor X</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>