force-app/main/default/objects/Question__c/fields/Editor_Y__c.field-meta.xml
<CustomField>
    <fullName>Editor_Y__c</fullName>
    <description>Y coordinate of this node in the authoring graph editor. See Editor_X__c for details.</description>
    <label>Editor Y</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>