force-app/main/default/objects/Question__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, the respondent must answer this question to move forward.</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>