force-app/main/default/objects/Question__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Ordering hint for display in the authoring editor and as a runtime fallback ordering when the graph is not yet defined.</description>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>