force-app/main/default/objects/Question__c/fields/Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Placeholder__c</fullName>
    <description>Placeholder text shown inside the input for free-text questions.</description>
    <label>Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>