force-app/main/default/objects/Question__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Parent Survey of this question node. Lookup (not master-detail) because Survey also looks up to Question via Start_Question__c — a circular schema dependency that breaks master-detail deploys.</description>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>