force-app/main/default/objects/Question__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Rendering and storage type for this question.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SingleChoice</fullName>
                <default>true</default>
                <label>Single Choice</label>
            </value>
            <value>
                <fullName>MultiChoice</fullName>
                <label>Multi Choice</label>
            </value>
            <value>
                <fullName>FreeText</fullName>
                <label>Free Text</label>
            </value>
            <value>
                <fullName>Scale</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>