force-app/main/default/objects/Question__c/fields/Validation_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Validation_Error_Message__c</fullName>
    <description>Configurable error message shown to the respondent when Validation_Regex__c does not match. Translatable.</description>
    <label>Validation Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>