force-app/main/default/objects/Question__c/fields/Validation_Regex__c.field-meta.xml
<CustomField>
    <fullName>Validation_Regex__c</fullName>
    <description>Optional regex to validate free-text answers on this question. The authoring editor must validate the regex itself at save time to prevent ReDoS in the browser.</description>
    <label>Validation Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>